Version 1.1.0
=============
* A new helper class has been added called Text for manipulating
  text in widgets. It's utilised by both TextBox and TextField which
  has reduced the complexity of those widgets significantly.
* BasicContainer and Container now hos the ability to resize themselves
  to fit their content with BasicContainer::resizeToContent and 
  Container::resizeToContent.
* TabbedArea::isOpaque and TabbedArea::setOpaque have been added to
  control if a tabbed area should draw its background or not.
* ScrollArea::isOpaque and ScrollArea::setOpaque have been added to
  control if a scroll area should draw its background or not.
* Widget::showPart has been added to be used when a specific
  part of a widget should be visible. An example is when a text
  area wants a specific text part to be visible in a scroll area.
  This function uses BasicContainer::showWidgetPart.
* Rectangle::intersect has been renamed to Rectangle::isIntersecting.
* Widget::hasModalFocus has been renamed to Widget::isModalFocused.
* Widget::hasModalMouseInputFocus has been renamed to Widget::isModalMouseInputFocused.
* Widget::generateAction has been renamed to Widget::distributeActionEvent.
* All enum constants have been renamed to avoid clashes with defines
  present in other libraries (read windows.h). Enum constants are now named
  the same ways as classes are. For example, the Key constant LEFT_SHIFT is 
  now named LeftShift.

Version 1.0.0
=============
* Large number of fixes to widgets/drawing/sdl2 support
* New widget InputBox
* Memory leak fixes in MessageBox example
* Python 3 fixes
* Stability fixes

Version 0.9.0
=============
* Guisan forked from Guisan
* Move codebase to SDL2.0
* Drop allegro support
* Move to scons build system
* Clean up code, reorganize

Version 0.6.1
=============
* The functions add, remove and clear have been removed from Widget.
  They now reside protected in basic container.
* Inclusion of OpenGL headers has been fixed on Mac.
